RangerLang.ebnf
(* RangerLang EBNF grammar rules *)


program             = {statement}
                    ;

statement           = (block | if_stmt | dow_stmt | assign_stmt | read_stmt | write_stmt), ";"
                    ;

block               = {statement}
                    ;

dow_stmt            = 'dow', expression, ";", block, 'enddo'
                    ;

if_stmt             = 'if', expression, ";", block, ['else', block], 'endif'
                    ;

assign_stmt         = identifier, ":=", expression
                    ;

read_stmt           = 'read', identifier
                    ;

write_stmt          = 'write', expression
                    ;

expression          = simple_expr, {additive_op, term}
                    ;

simple_expr         = term, {additive_op, term}
                    ;

term                = factor {multipl_op, factor}
                    ;

factor              = literal
                    | identifier
                    | sub_expr
                    | unary
                    ;

sub_expr            = "(", expression, ")"
                    ;

unary               = ("+" | "-" | "!"), expression
                    ;

relation_op         = "<" | ">" | "=" | ">=" | "<=" | "<>"
                    ;

additive_op         = "+" | "-" | "||"
                    ;

multipl_op          = "*" | "/" | "&&"
                    ;

ml_comment          = '*/', {character}, '*/'
                    ;

identifier          = letter, {letter | digit | "_"} 
                    ;

literal             = int_literal
                    ;

int_literal         = digit, {digit} 
                    ;


(* Fundamental rules *)

character           = digit | letter | symbol 
                    ;

letter              = uppercase | lowercase 
                    ;

digit               = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" 
                    ;

whitespace          = ? whitespace characters ? 
                    ;

symbol              = " " | "'" | '"' | "!" | "@" | "#" | "$" | "%" | "^" | "&"
                    | "*" | "(" | ")" | "_" | "-" | "+" | "=" | ";" | ":" | ","
                    | "." | "<" | ">" | "/" | "?" | "[" | "{" | "]" | "}" | "|"
                    | "\" | "~" | "`" 
                    ;

uppercase           = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
                    | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
                    | "U" | "V" | "W" | "X" | "Y" | "Z" 
                    ;

lowercase           = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" 
                    | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" 
                    | "u" | "v" | "w" | "x" | "y" | "z" 
                    ;


(* ENBF Cheatsheet - https://en.wikipedia.org/wiki/Extended_Backus%E2%80%93Naur_form

   =      - definition          [...]  - optional
   ,      - concatenation       {...}  - repetition; ZERO or more
   ;      - termination         (...)  - grouping
   |      - alternation         ?...?  - special sequence    
   "..."  - terminal string     '...'  - terminal string
   -      - exception
*)
